# Projet_Pacman

./: CMakeLists.txt  README.md
src/: main.c
src/core/: game.c  game.h  main.h
src/entities/: entity.c  entity.h  ghost_ai.c  ghost_ai.h  pacman.c  pacman.h
src/levels_and_framework/: framework.c  framework.h
